# myrotate

./: CMakeLists.txt  NOTES.md  README.md  build.sh  prj.conf
docker/builder/: Dockerfile
pyvibe/: GPT.md  README.md  as5600.py  drv2605.py  main.py
rotrs/: Cargo.toml
rotrs/src/: main.rs
sensor_demo/: Cargo.toml
sensor_demo/demo_web/: package.json  vite.config.ts
sensor_demo/demo_web/src/: AngleDisplay.css  AngleDisplay.tsx  App.tsx
sensor_demo/src/: main.rs
src/: main.c  rotary.c
