[package]
name = "sensor_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
axum = { version = "0.7.5", features = ["http2", "json"] }
http = "1.1"
hyper = { version = "1.3", features = ["full"] }
i2c = "0.1"
i2c-linux = { version = "0.1", features = ["i2c"] }
serde = { version = "1.0.198", features = ["derive", "serde_derive"] }
serde_json = "1.0.116"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
