[package]
name = "sensor_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["http2", "json"] }
clap = { version = "4.5", features = ["derive"] }
http = "1.1"
i2c = "0.1"
i2c-linux = { version = "0.1", features = ["i2c"] }
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
